--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "express-handlebars": "^3.0.0",
     "handlebars": "^4.0.10"
